--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,71 +4,65 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+    --background: 38, 77%, 88%;
+    --foreground: 16, 43%, 34%;
 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
+    --muted: 28, 46%, 56%;
+    --muted-foreground: 16, 43%, 34%;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+    --popover: 38, 77%, 88%;
+    --popover-foreground: 16, 43%, 34%;
 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
+    --border: 28, 46%, 56%;
+    --input: 28, 46%, 56%;
 
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
+    --card: 38, 77%, 88%;
+    --card-foreground: 16, 43%, 34%;
 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+    --primary: 28, 46%, 56%;
+    --primary-foreground: 60, 70%, 90%;
 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 39, 100%, 73%;
+    --secondary-foreground: 16, 43%, 34%;
 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
+    --accent: 39, 100%, 73%;
+    --accent-foreground: 16, 43%, 34%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
+    --destructive: 16, 43%, 34%;
+    --destructive-foreground: 38, 77%, 88%;
 
-    --ring: 215 20.2% 65.1%;
-
-    --radius: 0.5rem;
+    --ring: 28, 46%, 56%;
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+    --background: 16, 43%, 34%;
+    --foreground: 38, 77%, 88%;
 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
+    --muted: 28, 46%, 56%;
+    --muted-foreground: 38, 77%, 88%;
 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
+    --popover: 16, 43%, 34%;
+    --popover-foreground: 38, 77%, 88%;
 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
+    --border: 28, 46%, 56%;
+    --input: 28, 46%, 56%;
 
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
+    --card: 16, 43%, 34%;
+    --card-foreground: 38, 77%, 88%;
 
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --primary: 28, 46%, 56%;
+    --primary-foreground: 60, 70%, 90%;
 
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
+    --secondary: 39, 100%, 73%;
+    --secondary-foreground: 16, 43%, 34%;
 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+    --accent: 39, 100%, 52%;
+    --accent-foreground: 16, 43%, 34%;
 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 85.7% 97.3%;
+    --destructive: 38, 77%, 88%;
+    --destructive-foreground: 16, 43%, 34%;
 
-    --ring: 217.2 32.6% 17.5%;
-  }
-
-  div.editor mark {
-    background-color: rgba(150, 250, 250, 0.6);
+    --ring: 28, 46%, 56%;
   }
 }
 
@@ -78,12 +72,5 @@
   }
   body {
     @apply bg-background text-foreground;
-  }
-  input[type='number']::-webkit-outer-spin-button,
-  input[type='number']::-webkit-inner-spin-button,
-  input[type='number'] {
-    -webkit-appearance: none;
-    margin: 0;
-    -moz-appearance: textfield !important;
   }
 }
